feat: Add python
Signed-off-by: 吴小白 <296015668@qq.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app: [golang]
+        app: [golang, python]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
