--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         name: [python]
         suite: [trixie, slim-trixie, sid, slim-sid]
-        version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13-rc']
+        version: ['3.9', '3.10', '3.11', '3.12', '3.13-rc']
   
     steps:
       - uses: docker/setup-buildx-action@v3
