--- a/python/Dockerfile-linux.template
+++ b/python/Dockerfile-linux.template
@@ -242,6 +242,7 @@ RUN set -eux; \
 		| awk '/=>/ { so = $(NF-1); if (index(so, "/usr/local/") == 1) { next }; gsub("^/(usr/)?", "", so); printf "*%s\n", so }' \
 		| sort -u \
 		| xargs -r dpkg-query --search \
+		| grep -P '^[a-z0-9][a-z0-9\.\+-]*:' \
 		| cut -d: -f1 \
 		| sort -u \
 		| xargs -r apt-mark manual \
