--- a/python/Dockerfile-linux.template
+++ b/python/Dockerfile-linux.template
@@ -158,7 +158,15 @@ RUN set -eux; \
 	./configure \
 		--build="$gnuArch" \
 		--enable-loadable-sqlite-extensions \
+{{
+	# skip optimizations on alpine on riscv64 (except python 3.8 and 3.9)
+	# only 3.8 and 3.9 complete building on riscv64 with optimizations, 3.10-3.13rc all hit the 3 hour limit
+	if (is_alpine | not) or ( [ "3.8", "3.9" ] | index(rcVersion) ) then (
+-}}
 		--enable-optimizations \
+{{ ) else ( -}}
+		$(test "$gnuArch" != 'riscv64-linux-musl' && echo '--enable-optimizations') \
+{{ ) end -}}
 		--enable-option-checking=fatal \
 		--enable-shared \
 {{
@@ -299,7 +307,12 @@ RUN set -eux; \
 		"pip==$PYTHON_PIP_VERSION" \
 {{ if .setuptools then ( -}}
 		"setuptools==$PYTHON_SETUPTOOLS_VERSION" \
-{{ ) else "" end -}}
+		# get-pip.py installs wheel by default, adding in case get-pip defaults change
+		wheel \
+{{ ) else ( -}}
+		--no-setuptools \
+		--no-wheel \
+{{ ) end -}}
 	; \
 	rm -f get-pip.py; \
 	\
