--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,20 +9,20 @@ on:
 jobs:
   generate-jobs:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        app: [golang, python]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check ${{ matrix.app }}
+      - name: Check for changes
         run: |
-          commit_message="build(${{ matrix.app }}): bump ${{ matrix.app }} to latest"
-          cd ${{ matrix.app }}
-          chmod +x *.sh
-          ./update.sh
-          cd ..
+          apps=("golang" "python")
+          commit_message="build(app): bump app to latest"
+          for app in "${apps[@]}"; do
+            pushd $app
+            chmod +x *.sh
+            ./update.sh
+            popd
+          done
           git status
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
