--- a/node/18/trixie/Dockerfile
+++ b/node/18/trixie/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/loong64/buildpack-deps:bookworm
+FROM ghcr.io/loong64/buildpack-deps:trixie
 
 RUN groupadd --gid 1000 node \
   && useradd --uid 1000 --gid node --shell /bin/bash --create-home node
