--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         name: [python]
         suite: [trixie, slim-trixie]
-        version: ['3.9', '3.10', '3.11', '3.12', '3.13-rc']
+        version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
       - uses: docker/setup-buildx-action@v3
