feat: 更新 node slim 镜像

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         name: [node]
-        suite: [trixie]
+        suite: [trixie, trixie-slim]
         version: ['18', '20']
 
     steps:
