fix: 修正 tag 不正确

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -34,8 +34,23 @@ jobs:
         run: |
           full_version=$(grep -m1 -oP "ENV PYTHON_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile)
           echo "full_version=${full_version}" >> $GITHUB_ENV
+      
+      - name: Build and push ${{ matrix.name }} ${{ matrix.version }} image
+        if: matrix.suite == 'trixie-slim'
+        uses: docker/build-push-action@v6
+        with:
+          context: ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/
+          platforms: linux/loong64
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.version }}-${{ matrix.suite }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}-${{ matrix.suite }}
+          outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build and push ${{ matrix.name }} ${{ matrix.version }} image
+        if: matrix.suite == 'trixie'
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/
