--- a/golang/Dockerfile-linux.template
+++ b/golang/Dockerfile-linux.template
@@ -29,7 +29,7 @@ ENV GOLANG_VERSION {{ .version }}
 				ppc64le: "ppc64le",
 				riscv64: "riscv64",
 				s390x: "s390x",
-				loong64: "loong64",
+				loong64: "loongarch64",
 			}
 		else
 			{
