--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -34,35 +34,31 @@ jobs:
         run: |
           full_version=$(grep -m1 -oP "ENV PYTHON_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile)
           echo "full_version=${full_version}" >> $GITHUB_ENV
-          suite=${{ matrix.suite }}
-          if echo ${{ matrix.suite }} | grep -q 'alpine'; then
-            suite=alpine
-          fi
-          echo "suite=${suite}" >> $GITHUB_ENV
-      
-      - name: Build and push slim image
-        if: matrix.suite == 'trixie-slim'
-        uses: docker/build-push-action@v6
-        with:
-          context: ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/
-          platforms: linux/loong64
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.version }}-${{ env.suite }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}-${{ env.suite }}
-          outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
-      - name: Build and push ${{ matrix.name }} ${{ matrix.version }} image
-        if: matrix.suite == 'trixie'
+          version=${{ matrix.version }}
+          image_tag=${version}
+          full_image_tag=${full_version}
+
+          if echo ${{ matrix.suite }} | grep -q 'alpine'; then
+            image_tag=${version}-alpine
+            full_image_tag=${full_version}-alpine
+          fi
+          if echo ${{ matrix.suite }} | grep -q 'slim'; then
+            image_tag=${version}-slim
+            full_image_tag=${full_version}-slim
+          fi
+          echo "image_tag=${image_tag}" >> $GITHUB_ENV
+          echo "full_image_tag=${full_image_tag}" >> $GITHUB_ENV
+      
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/
           platforms: linux/loong64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.image_tag }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_image_tag }}
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ matrix.version }}-${{ matrix.suite }}
             ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}:${{ env.full_version }}-${{ matrix.suite }}
           outputs: type=image,oci-mediatypes=true,compression=zstd,compression-level=3,force-compression=true
