--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        name: [node]
-        suite: [trixie, trixie-slim]
-        version: ['18', '20']
+        name: ['node']
+        suite: ['trixie', 'trixie-slim', 'alpine3.21']
+        version: ['18', '20', '22', '23' ]
 
     steps:
       - uses: docker/setup-buildx-action@v3
@@ -32,6 +32,11 @@ jobs:
 
       - name: Get Version
         run: |
+          echo "build=true" >> $GITHUB_ENV
+          if [ ! -f "${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile" ]; then
+            echo "build=false" >> $GITHUB_ENV
+            exit 0
+          fi
           full_version=$(grep -m1 -oP "ENV NODE_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile)
           echo "full_version=${full_version}" >> $GITHUB_ENV
 
@@ -51,6 +56,7 @@ jobs:
           echo "full_image_tag=${full_image_tag}" >> $GITHUB_ENV
 
       - name: Build and push image
+        if: env.build == 'true'
         uses: docker/build-push-action@v6
         with:
           context: ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/
