--- a/.github/workflows/buildpack-deps.yml
+++ b/.github/workflows/buildpack-deps.yml
@@ -1,9 +1,9 @@
-name: buildpack-deps
+name: build(buildpack-deps)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 21 * * 0'
+    - cron: '0 0 2 * *'
 
 jobs:
   buildpack-deps:
