--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -1,9 +1,9 @@
-name: golang
+name: build(golang)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 21 * * 0'
+    - cron: '0 0 3 * *'
 
 jobs:
   golang:
