--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,9 +1,9 @@
-name: python
+name: build(python)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 21 * * 0'
+    - cron: '0 0 3 * *'
 
 jobs:
   python:
