--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         name: ['golang']
         suite: ['trixie', 'alpine3.21']
-        version: ['1.22', '1.23']
+        version: ['1.22', '1.23', '1.24-rc']
 
     steps:
       - uses: docker/setup-buildx-action@v3
