--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,25 +4,41 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: 0 20 * * 0
+    - cron: 0 20 * * *
 
 jobs:
   generate-jobs:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check for changes
+        id: set-matrix
         run: |
+          declare -a changed_apps
           apps=("golang" "node" "python")
           commit_message="build(app): bump app to latest"
+          
           for app in "${apps[@]}"; do
             pushd $app
             chmod +x *.sh
             ./update.sh
             popd
+            if git status --porcelain -- $app | grep 'M'; then
+              changed_apps+=("$app")
+            fi
           done
+
+          if [ ${#changed_apps[@]} -eq 0 ]; then
+            echo 'matrix={"include":[]}' >> $GITHUB_OUTPUT
+          else
+            json_array=$(printf '%s\n' "${changed_apps[@]}" | jq -R . | jq -s '. | map({"app":.})' | jq -c .)
+            echo "matrix={\"include\":${json_array}}" >> $GITHUB_OUTPUT
+          fi
+
           git status
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
@@ -30,3 +46,22 @@ jobs:
           git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+  trigger-workflows:
+    needs: generate-jobs
+    if: fromJson(needs.generate-jobs.outputs.matrix).app != '[]'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.generate-jobs.outputs.matrix) }}
+    steps:
+      - name: Trigger workflow
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: '${{ matrix.app }}.yml',
+              ref: 'main'
+            })
