--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -1,6 +1,11 @@
 name: build(golang)
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'golang/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 3 * *'
@@ -9,6 +14,7 @@ jobs:
   golang:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         name: ['golang']
         suite: ['trixie', 'alpine3.21']
