--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,6 +1,11 @@
 name: build(node)
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'node/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 3 * *'
@@ -9,6 +14,7 @@ jobs:
   node:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         name: ['node']
         suite: ['trixie', 'trixie-slim', 'alpine3.21']
