perf: 修复触发参数

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
   trigger-workflows:
     needs: generate-jobs
-    if: fromJson(needs.generate-jobs.outputs.matrix).app != '[]'
+    if: ${{ fromJson(needs.generate-jobs.outputs.matrix).include[0] }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
