--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         name: ['golang']
         suite: ['trixie', 'alpine3.21']
-        version: ['1.22', '1.23', '1.24-rc']
+        version: ['1.23', '1.24']
 
     steps:
       - uses: docker/setup-buildx-action@v3
