--- a/.github/workflows/buildpack-deps.yml
+++ b/.github/workflows/buildpack-deps.yml
@@ -15,13 +15,14 @@ jobs:
         suite: [trixie]
 
     steps:
-      - uses: docker/setup-buildx-action@v3
-
       - name: Checkout ${{ matrix.name }}
         uses: actions/checkout@v4
 
       - name: Setup QEMU
-        run: docker run --rm --privileged ghcr.io/loong64/qemu-user-static --reset -p yes
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
