--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -21,13 +21,14 @@ jobs:
         version: ['1.23', '1.24']
 
     steps:
-      - uses: docker/setup-buildx-action@v3
-
       - name: Checkout ${{ matrix.name }}
         uses: actions/checkout@v4
 
       - name: Setup QEMU
-        run: docker run --rm --privileged ghcr.io/loong64/qemu-user-static --reset -p yes
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
