--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,11 @@ jobs:
         version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
+    - name: Setup QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-
-    - name: Setup QEMU
-      run: docker run --rm --privileged ghcr.io/loong64/qemu-user-static --reset -p yes
 
     - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
       run: |
