--- a/redis/Dockerfile.template
+++ b/redis/Dockerfile.template
@@ -1,5 +1,5 @@
 {{ if env.variant == "alpine" then ( -}}
-FROM cr.io/loong64/lpine:{{ .alpine.version }}
+FROM ghcr.io/loong64/alpine:{{ .alpine.version }}
 {{ ) else ( -}}
 FROM ghcr.io/loong64/debian:trixie-slim
 {{ ) end -}}
