--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,8 @@ jobs:
         version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
-    - name: Setup QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
 
     - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
       run: |
@@ -29,17 +26,15 @@ jobs:
   check-golang:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         suite: ['trixie', 'alpine']
         app: ['golang']
         version: ['1.22', '1.23']
 
     steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Setup QEMU
-      run: docker run --rm --privileged ghcr.io/loong64/qemu-user-static --reset -p yes
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
 
     - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
       run: |
@@ -48,26 +43,33 @@ jobs:
   check-node:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         suite: ['trixie', 'trixie-slim', 'alpine']
         app: ['node']
         version: ['18', '20', '22', '23']
 
     steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Setup QEMU
-      run: docker run --rm --privileged ghcr.io/loong64/qemu-user-static --reset -p yes
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
 
     - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
       run: |
-        case ${{ matrix.suite }} in
-          trixie|trixie-slim)
-            if [ "${{ matrix.version }}" -gt "20" ]; then
-              # https://github.com/nodejs/node/pull/52888
-              exit 0
-            fi
-            ;;
-        esac
         docker run --rm --platform linux/loong64 ghcr.io/${{ github.repository_owner }}/${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }} node --version
+
+  check-redis:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        suite: ['trixie', 'alpine']
+        app: ['redis']
+        version: ['7.2', '7.4']
+
+    steps:
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
+
+    - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
+      run: |
+        docker run --rm --platform linux/loong64 ghcr.io/${{ github.repository_owner }}/${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }} redis-server --version
