--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,3 +73,20 @@ jobs:
     - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
       run: |
         docker run --rm --platform linux/loong64 ghcr.io/${{ github.repository_owner }}/${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }} redis-server --version
+
+  check-postgres:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        suite: ['trixie', 'alpine']
+        app: ['postgres']
+        version: ['13', '14', '15', '16', '17']
+
+    steps:
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
+
+    - name: Check ${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }}
+      run: |
+        docker run --rm --platform linux/loong64 ghcr.io/${{ github.repository_owner }}/${{ matrix.app }}:${{ matrix.version }}-${{ matrix.suite }} psql --version
